Ivan_Sorokatyi/13.helm/nfs.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-provisioner
  labels:
    name: nfs-provisioner
